--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,10 @@
 {
+  "port": 8000,
+  "files": [
+    "build/**/*.{html,htm,css,js}"
+  ],
   "server": {
-    "baseDir": "src",
+    "baseDir": "build",
     "routes": {
       "/node_modules": "node_modules"
     }
