--- a/package.json
+++ b/package.json
@@ -2,35 +2,21 @@
   "name": "sposy-kinklist",
   "version": "1.0.0",
   "description": "Just another kinklist.",
+  "keywords": [],
+  "author": "sposy",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sposy/kinklist"
+  },
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
     "compile": "gulp compile",
-    "start": "concurrent --kill-others \"gulp watch\" \"lite-server\"",
-    // "build": "tsc -p src/",
-    // "build:watch": "tsc -p src/ -w",
-    // "build:e2e": "tsc -p e2e/",
-    // "serve": "lite-server -c=bs-config.json",
-    // "serve:e2e": "lite-server -c=bs-config.e2e.json",
-    // "prestart": "npm run build",
-    // "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    // "pree2e": "npm run build:e2e",
-    // "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
-    // "preprotractor": "webdriver-manager update",
-    // "protractor": "protractor protractor.config.js",
-    // "pretest": "npm run build",
-    // "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
-    // "pretest:once": "npm run build",
-    // "test:once": "karma start karma.conf.js --single-run",
+    "serve": "lite-server -c=bs-config.json",
+    "start": "concurrent --kill-others \"gulp watch\" \"npm run serve\"",
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angular/quickstart"
-  },
-  "keywords": [],
-  "author": "sposy",
-  "license": "GNU GENERAL PUBLIC LICENSE v3",
   "dependencies": {
     "@angular/common": "~2.4.0",
     "@angular/compiler": "~2.4.0",
@@ -47,7 +33,6 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    // "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
@@ -58,17 +43,9 @@
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.5",
     "gulp-util": "^3.0.8",
-    // "jasmine-core": "~2.4.1",
-    // "karma": "^1.3.0",
-    // "karma-chrome-launcher": "^2.0.0",
-    // "karma-cli": "^1.0.1",
-    // "karma-jasmine": "^1.0.2",
-    // "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    // "protractor": "~4.0.14",
-    // "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
+    "tslint": "^4.4.2",
     "typescript": "~2.0.10"
   }
 }
